[project]
name = "streamlit-google-sheets-app"
version = "1.0.0"
description = "Streamlit application with Google OAuth and Google Sheets integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "requests>=2.31.0"
]
